2005-07-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gconf/gconf-client.c (gconf_client_notify):
	s/g_entry_unref/gconf_entry_unref (a typo).

2005-07-13  Aivars Kalvans <aivars.kalvans@inbox.lv>
	
	* gconf/gconf-client.c (gconf_client_notify): unref GConfEntry
	after notifying client. Fixes bug #158756

2005-06-21  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: require glib 2.7.0
	
2005-06-21  Mark McLoughlin  <mark@skynet.ie>

	Patch from Marcus Meissner <meissner@suse.de> in
	bug #308448

	* gconf/gconf-changeset.h,
	  gconf/gconf-client.h: use G_GNUC_NULL_TERMINATED for
	gconf_(client|engine)_change_set_from_current()

2005-06-18  Aivars Kalvans <aivars.kalvans@inbox.lv>

	* gconf/gconf-sources.c (gconf_source_free): free ->address
	Fixes bug #307887

2005-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2005-06-13  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #306937 - gconfd-2 not shutting down when its
	no longer in use.

	* gconf/gconfd.c: (no_databases_in_use): account for the
	fact that the default database is on the global list of
	databases now too.

2005-06-08  Tor Lillqvist  <tml@novell.com>

	* configure.in: Require GLib 2.6.0 so we can use the "gstdio
	wrappers".

	* backends/*.c
	* gconf/*.c: Use gstdio wrappers and gdir for better support of
	non-ASCII pathnames on Windows. Use g_strerror() consistently in
	error messages, as g_printerr() etc want UTF-8.

	* gconf/Makefile.am: Append EXEEXT to gconfd's name.

	* gconf/gconf-internals.h: Use functions instead of variables to
	access the run-time pathnames on Win32. This enables us to have a
	cleaner DllMain(). Add underscore prefix to the internal
	Win32-only functions.

	* gconf/dllmain.c (DllMain): Use minimalistic DllMain() that only
	stores the handle to the DLL.
	(setup): Do the real work here instead.
	(_gconf_win32_get_locale_dir, etc): Functions to return the
	run-time pathnames.
